# AiRAG

./: .gitignore  README.m  README.md  chat_history.json  requirements.txt  test.py  world_war2.txt
AiTest/: AiTest.csproj  AiTest.sln  Program.cs
CSharp/: Program.cs
CSharp/ConsolApp/: AiTest.csproj  Program.cs
CSharp/GUI/chatbot/chatbot/: App.xaml  App.xaml.cs  ChatControl.xaml  ChatControl.xaml.cs  ChatService.cs  ColorSelectionControl.xaml  ColorSelectionControl.xaml.cs  HistoryControl.xaml  HistoryControl.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  chatbot.csproj  chatbot.sln
Cpp/AiTest/: AiTest.cpp  AiTest.sln  AiTest.vcxproj  AiTest.vcxproj.filters
Cpp/Gui/cpp-gui-app/Chatbot/: AiConnector.cpp  AiConnector.h  CMakeLists.txt  Main.qml  main.cpp  settingExample.txt
Python/: README_GUI.md  chat_service.py  chat_service_flexible.py  chatbot_gui.py  chatbot_gui_working.py  simple_chatbot.py  test.py  test_proper_ssl.py  test_ssl.py  test_working_version.py
